--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700" rel="stylesheet">
   <link href="/style.css" rel="stylesheet">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- iOS double tap disable -->
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="theme-color" content="#000000" />
   <!--
       manifest.json provides metadata used when your web app is added to the
